--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,8 +50,8 @@ android {
         applicationId "com.example.mylogin_191"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+
+        targetSdkVersion 20
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
